<resources>
    <string name="app_name">DLSU LPEP Green Guide</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="title_activity_lasallian_cheers">LasallianCheers</string>
    <string name="alma_mater_song_title">Alma Mater Hymn</string>
    <string name="de_la_salle_song_title">De La Salle Song</string>
    <string name="green_archers_song_title">Green Archers Song</string>
    <string name="archers_song_title">Archers Song</string>
    <string name="victory_song_title">Victory Song</string>
    <string name="marching_song_title">Marching Song</string>
    <string name="fighting_song_title">Fighting Song</string>
    <string name="la_salle_spelling_title">La Salle Spelling</string>
    <string name="who_win_title">Who’s To Win This Game?</string>
    <string name="zipa_title">Zama Zipa Zam</string>
    <string name="rekti_title">Rektikano</string>
    <string name="haydee_title">Haydee Three Times</string>
    <string name="buma_title">Bumakaya</string>
    <string name="strawberry_title">Strawberry Shortcake</string>
    <string name="derecho_title">Derecho La Salle</string>
    <string name="yama_title">Yamakadep</string>
    <string name="fans_title">La Salle Fans</string>
    <string name="anchors_title">Anchors Aweigh</string>
    <string name="men_title">Men of La Salle</string>
    <string name="onward_title">Onward Green Archers</string>
    <string name="for_green_title">For The Green</string>
    <string name="rally_title">La Salle Rally</string>
    <string name="green_white_title">Fight, Fight, Green and White</string>
    <string name="hold_title">Hold ‘Em Tight</string>
    <string name="shoulder_title">Shoulder To Shoulder</string>
    <string name="animo_title">Animo Cheer</string>
    <string name="archer_title">Archer</string>
    <string name="fight_again_title">Fight ‘Em Again</string>
    <string name="live_jesus_title">Live Jesus In Our Hearts</string>
    <string name="alma_mater_song">Hail, Hail\r\nAlma Mater\r\nHail to De La Salle\r\nWe\u2019ll hold your banner high and bright\r\nA shield of green and white\r\nWe\u2019ll fight to keep your glory bright\r\nAnd never shall we fail\r\nHail to thee our Alma Mater\r\nHail! Hail! Hail!</string>
    <string name="de_la_salle_song">Come whatever kind of weather\r\nWhen the old gangs get together\r\nThat\u2019s the time to think of days gone by\r\nChase your blues and cares away\r\nLet\u2019s be happy, let\u2019s be gay\r\nIn our hearts, the song will never die\r\nChorus:\r\nDe La Salle, we\u2019re rooting for you!\r\nDe La Salle, O, can\u2019t you see\r\nEvery one of us is you\r\nWe\u2019ll cheer you on to victory\r\nRah! Rah!\r\nTo the green and to the white\r\nWe will pledge our loyalty\r\nAnd may years add but fame\r\nTo that grand old name\r\nDe La Salle, De La Salle (twice)</string>
    <string name="green_archers_song">(Bugle blast) Rah! Rah! Rah\r\n(Bugle blast) Rah! Rah! Rah\r\n\r\nOn into the fight, Green Archers\r\n(WHITE!)\r\nFight to victory (GREEN! WHITE!\r\nFIGHT!)\r\nFor La Salle, you valiant marchers (Rah!)\r\nEvery fighters be (Rah! Rah! Rah!)\r\nGlory for La Salle Green Archers (Fight!)\r\nOur motto ever be (Green! White! Fight!)\r\nLet your arrows fly true, Archers\r\n\u2018Till we down the enemy (FIGHT! FIGHT!FIGHT!)</string>
    <string name="archers_song">On into the fight Green Archer\r\nOn to Victory\r\nFor La Salle we valiant marchers\r\nEvery fighters be\r\nLet your arrows fly true, Archers\r\n\u2018Till we down the enemy</string>
    <string name="victory_song">Cheer, cheer, for old De La Salle\r\nWake up the echoes cheering her name\r\nSend her rousing cheers on high\r\nShake out the thunder from the sky\r\nWhat though the odds be great or small\r\nOld De La Salle will win over all\r\nWhite her loyal sons are marching\r\nOnward to victory, rah-rah- rah!</string>
    <string name="marching_song">March, march on down the floor\r\nFighting for La Salle\r\nBreak through the other line\r\nTheir strength to defy\r\nWe\u2019ll give them a long cheer\r\nTo our true men\r\nWe\u2019re here to win again\r\nLa Salle\u2019s team can fight to the end\r\nAnd we will win\r\nRah! Rah! Rah!</string>
    <string name="fighting_song">On to victory\r\nWe\u2019re out to win today, here\u2019s why\r\nFor the green and white\r\nGreen Archers going in to do or die\r\nWin or lose today\r\nWe\u2019re gonna try, and try the same old way\r\nAnd with all our might\r\nWe\u2019re gonna fight! Fight! Fight!\r\nFIGHT! FIGHT! FIGHT!\r\nOn to victory\r\nOnward to L S C\r\nOur college here beside the sea\r\nAll together now\r\nWe\u2019re going onward, on to victory\r\nLet our arrows fly\r\nAnd keep them flying, flying to their goal!\r\nAnd with all our might\r\nWe\u2019re gonna fight! Fight! Fight!\r\nFIGHT! FIGHT! FIGHT!\r\nOn to victory\r\nLA SALLE!</string>
    <string name="la_salle_spelling">La Salle Spelling three times\r\nset! 1 2 3\r\nLa Salle spelling three times!\r\n(La Salle spelling three times!)\r\nReady! (Ready!)\r\n1 2 3\r\n(Uno, dos, tres!)\r\nL \u2013 A \u2013 S \u2013 A \u2013 L-L \u2013 E\r\nLa Salle, rah!\r\nL \u2013 A \u2013 S \u2013 A \u2013 L-L \u2013 E\r\nLa Salle, rah!\r\nL \u2013 A \u2013 S \u2013 A \u2013 L-L \u2013 E\r\nLa Salle, rah!</string>
    <string name="who_win">Who\u2019s to win this game, set! 1 2 \r\nWho\u2019s to win this game? (Green!)\r\nWho\u2019s to win this game? (White!)\r\nGreen! (Green!)\r\nWhite! (White!)\r\nGreen, white, fight!\r\nGreen, white, white, white!\r\nGo, fight, fight, fight, fight!\r\nGreen, white, go, fight!\r\nGreen, white, fight!\r\nGreen, white, white, white!\r\nGo, fight, fight, fight, fight!\r\nDe La Salle! De La Salle!\r\nFight! Team! Fight!</string>
    <string name="zipa">Zama Zipa Zam, set! 1 2 3\r\nZama Zipa Zam! (Zama Zipa Zam!)\r\nReady! (Ready!)\r\n1 2 3\r\nZama Zipa Zam!\r\n(Clap: 1, 2, 1-2- 3, 1,2, 1-2- 3)\r\nFight!\r\n(Clap: 1, 2, 1-2- 3, 1,2, 1-2- 3)\r\nFight!\r\n(Clap: 1, 2, 1-2- 3, 1,2, 1-2- 3)\r\nFight!\r\nWin! Team! Win!</string>
    <string name="rekti">Rektikano, set! 1 2 3\r\nRektikano! (Rektikano!)\r\nReady! (Ready!)\r\n1 2 3\r\nRektikano, keena keena\r\nRektikano, keena keena\r\nRektikano, rektikano, rektikano, rah!\r\nRektikano, keena keena\r\nRektikano, keena keena\r\nRektikano, rektikano, rektikano, rah!\r\nSis-boom- bah!\r\nSis-boom- bah!\r\nBoom-rah- boom-rah- boom-rah- rah!\r\nBoom-rah- boom-rah- boom-rah- rah!\r\nSis-boom- bah!\r\nSis-boom- bah!\r\nLa Salle!</string>
    <string name="haydee">Haydee three times, set! 1 2 3\r\nHaydee three times!\r\n(Haydee three times!)\r\nReady! (Ready!)\r\n1 2 3\r\nHaydee-kaydee! Kala-wala- waydee!\r\nKala-wala- wingo-dingo- daydee!\r\nHush! Kush! Kala-wala- wush-wush!\r\nKala-wala- wingo-dingo- dash!\r\nHaydee-kaydee! Kala-wala- waydee!\r\nKala-wala- wingo-dingo- daydee!\r\nHush! Kush! Kala-wala- wush-wush!\r\nKala-wala- wingo-dingo- dash!\r\nHaydee-kaydee! Kala-wala- waydee!\r\nKala-wala- wingo-dingo- daydee!\r\nHush! Kush! Kala-wala- wush-wush!\r\nKala-wala- wingo-dingo- dash!\r\n1 2 3!\r\nAnimo!\r\nLa Salle!</string>
    <string name="buma">Bumakaya, set! 1 2 3\r\nBumakaya! (Bumakaya!)\r\nReady! (Ready!)\r\n1 2 3\r\nBu-ma- kaya\r\nI-ma- kadiwa\r\nBu-ma- kaya\r\nI-ma- kadiwa\r\nBumakaya, imakadiwa\r\nBumakaya, imakadiwa\r\nBumakaya, imakadiwa\r\nFight! Team! Fight!</string>
    <string name="strawberry">Strawberry shortcake, set! 1 2 3\r\nStrawberry shortcake!\r\n(Strawberry shortcake!)\r\nReady! (Ready!)\r\n1 2 3\r\nStrawberry shortcake, blueberry pie\r\nV-I- C-T- O-R- Y!\r\nVictory, victory, is our cry!\r\nDe La Salle! De La Salle!\r\nHeidi-hei!</string>
    <string name="derecho">1-2, 1-2, 3-4\r\n1-2, 1-2, 3-4\r\n1-2, 1-2, 3-4\r\n1-2, 1-2, 3-4\r\nD 1-2, 1-2, 3-4 CLAP\r\nL 1-2, 1-2, 3-4\r\nS 1-2, 1-2, 3-4\r\nU 1-2, 1-2, 3-4 D-L- S-U!\r\nDLSU, DERECHO LA SALLE!!!</string>
    <string name="yama">Yamakadep, set! 1 2 3\r\nYamakadep! (Yamakadep!)\r\nReady! (Ready!)\r\n1 2 3\r\nYamakadep, D!\r\nYamakadep, L!\r\nYamakadep, S!\r\nYamakadep, D-L- S!\r\nRei, green!\r\nRei, white!\r\nRei, green! Rei, white!\r\nRei, rei, rei-rei- rei!\r\nRei, rei, rei-rei- rei!\r\nLa Salle!\r\nFight! Team! Fight!</string>
    <string name="fans">La Salle fans, set! 1 2 3\r\nLa Salle fans! (La Salle fans!)\r\nReady! (Ready!)\r\n1 2 3\r\nLa Salle fans in the stands, if you hear us,\r\nClap your hands!\r\n(Clap: 1, 2, 3-4, 1, 2, 3-4, 1)\r\nNow that you\u2019re with the beat, it\u2019s time to\r\nMove your feet!\r\n(Stomp: 1, 2, 3-4, 1, 2, 3-4, 1)\r\nNow that you\u2019re in the groove, it\u2019s time to\r\nSee your move!\r\n(Clap and stomp: 1, 2, 3-4, 1, 2, 3-4, 1)</string>
    <string name="anchors">Anchors aweigh my boys\r\nAnchors aweigh\r\nFarewell to La Salle joys\r\nWe sail at break of day day day\r\nThrough our last night on shore\r\nOnward we roam\r\nUntil we meet once more\r\nHere\u2019s wishing you a happy voyage home\r\nSail La Salle down the floor\r\nSail to the sky\r\nWe\u2019ll never change our course\r\nSo, rival, you steers shy- shy- shy- shy\r\nRoll up the score, La Salle\r\nAnchors aweigh\r\nSail La Salle down the floor\r\nAnd sink the rival, sink the rival, hey!</string>
    <string name="men">Men of La Salle, we are marching\r\nWith our colors of green and white\r\nMeeting our foemen with valor\r\nFor the glory of old we\u2019ll fight\r\nSo let\u2019s go to the battle with courage\r\nFor our goal is now in sight\r\nAnd we\u2019ll hope, fight and sing with all our might so strong\r\n\u2018Till nobly we have fought and won the fight\r\nRefrain:\r\nFight on to victory, onward our watchword be\r\nWe\u2019re out to win this game with all its honor\r\nFor you, La Salle, we\u2019ll always try to conquer\r\nFight on to victory, let all your courage see\r\nAnd homeward, we\u2019ll cheer thee as sons of\r\nLa Salle\r\nSo fight on to victory (Twice)</string>
    <string name="dean_message">In our tradition of teaching minds, touching hearts, and transforming lives, allow\u00A0us to accompany you in your journey  as college students through the Lasallian Personal  Effectiveness Program (LPEP).\r\n\r\nLPEP will introduce you to our University, its culture, and the Lasallian core values we constantly uphold in all the things  that we do here. It will give you a glimpse of what your college life will be for the next three to four years. Make sure you enjoy your LPEP!\u00A0\r\n\r\nLPEP is made more exciting this year with the launch of this  Green Guide app, prepared especially for your batch by your  fellow Lasallians from the College of Computer Studies. The app contains more information about the student life here in DLSU. With just one click, you will find the different offices, groups, and organizations that you may join to make your college life more productive and exciting.\r\n\r\nLastly, as you start your journey in DLSU, I am happy to introduce you to a community that takes care of your  welfare, looks after you, and ensures the development of  your whole potential. We commit ourselves to molding you to become Lasallian achievers for God and country.\u00A0\r\n\r\nI thank God for bringing you all here in DLSU.\r\n\r\nAnimo La Salle!</string>
    <string name="dean_title">Dean of Student Affairs</string>
    <string name="dean_name">Amelia M. Galang</string>
    <string name="begin_button">Begin Journey</string>
</resources>