<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/message_bg"
    tools:context=".DeanMessage">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:paddingTop="50dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#fff"
        android:paddingBottom="20dp"
        android:text="Our dear Lasallian froshies,\nWelcome to De La Salle University!"
        android:id="@+id/welcometxt"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/dean_message"
        android:textColor="#fff"
        android:id="@+id/messagetxt"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="30dp"
        android:orientation="horizontal"
        >
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/dean"
        android:layout_centerHorizontal="true" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dean_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#fff"
            android:id="@+id/deantxt"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dean_title"
                android:textSize="15sp"
                android:textColor="#fff"
                android:id="@+id/titletxt"
                />
            </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/begin_button"
        android:textAllCaps="false"
        android:layout_gravity="bottom"
        android:background="#015249"
        android:textColor="#fff"
        android:textSize="20sp"
        android:id="@+id/btnbegin"
        />
</LinearLayout>

</ScrollView>

</RelativeLayout>
